Fixed edition-header h3 spacing (#4393)
Fixed edition-header h3 spacing by introducing a edition-header class to replace the generic h3
rule which was clashing with the list-header class.

--- a/static/css/components/work.less
+++ b/static/css/components/work.less
@@ -29,11 +29,6 @@
 // Center (editionAbout)
 div.editionAbout {
   margin-bottom: 20px;
-  h3 {
-    font-size: 14px;
-    margin: 0 0 0em;
-  }
-
   p {
     margin: 1em 0;
     font-size: 13px;
@@ -94,6 +89,11 @@ vertical-align: middle;
 
 .section, .section h6 {
   font-size: .8em;
+}
+
+h3.edition-header {
+  font-size: 14px;
+  margin: 0 0 0em;
 }
 
 h2.edition-byline {
